# ha-garden-irrigation

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yaml  test.yaml  validate.yaml
custom_components/garden_irrigation/: __init__.py  balance.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  et0.py  irrigation_log.py  manifest.json  notify.py  recommendation.py  repairs.py  scheduler.py  select.py  sensor.py  services.yaml  storage.py  strings.json  validation.py  weather.py
custom_components/garden_irrigation/translations/: en.json  it.json
dashboards/: README.md  gardenirrigation.yaml
docs/: README.md  agronomy.md  calibration.md  fao56.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py  const.py  test_balance.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_diagnostics.py  test_et0.py  test_init.py  test_irrigation_log.py  test_notify.py  test_recommendation.py  test_scheduler.py  test_select.py  test_sensor.py  test_weather.py
www/garden-irrigation-cards/: README.md  garden-irrigation-cards-shared.js  garden-irrigation-overview-card-editor.js  garden-irrigation-overview-card.js  garden-irrigation-zone-card-editor.js  garden-irrigation-zone-card.js
