[project]
name = "garden-irrigation"
version = "0.1.0"
description = "Home Assistant custom integration: irrigation decision support (garden_irrigation)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component",
    "syrupy>=4.0",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/garden_irrigation"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # bugbear
    "ASYNC",           # async pitfalls (blocking calls, etc.)
    "SIM",             # simplify
    "RUF",             # ruff-specific
]
ignore = [
    "E501",            # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.garden_irrigation"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", ".venv"]
pythonpath = ["."]
